Fixed: wflow-consoleweb - Process Builder - Node endpoints are too small and hard to drag a new connection from it. @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/pbuilder/css/pbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/pbuilder/css/pbuilder.css
@@ -139,8 +139,8 @@
 .endpoint {
     display: none; 
     position: absolute; 
-    width:6px; 
-    height: 6px; 
+    width:12px; 
+    height: 12px; 
     border-radius: 50%; 
     background: #54c5fd; 
     box-sizing: border-box; 
@@ -155,23 +155,23 @@
     cursor: pointer;
 }
 .endpoint.endtop {
-    top:2px; 
-    left:50%; 
+    top:0px; 
+    left:70%; 
     transform: translateX(-50%);
 }
 .endpoint.endleft {
-    top:50%; 
-    left:2px; 
+    top:30%; 
+    left:0px; 
     transform: translateY(-50%);
 }
 .endpoint.endright {
-    top:50%; 
-    right:2px; 
+    top:70%; 
+    right:0px; 
     transform: translateY(-50%);
 }
 .endpoint.endbottom {
-    bottom:2px; 
-    left:50%; 
+    bottom:0px; 
+    left:30%; 
     transform: translateX(-50%);
 }
 .transition_label {
